better black box methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.defaultInterpreterPath": "/root/.venv/bin/python",
-    "jupyter.kernels.filter": [],
-    "notebook.defaultKernel": "chinese-model-honesty"
+    "python.defaultInterpreterPath": "/root/.venv/bin/python"
 }
