--- a/.gitignore
+++ b/.gitignore
@@ -1,91 +1,91 @@
-# # Byte-compiled / optimized / DLL files
-# __pycache__/
-# *.py[cod]
-# *$py.class
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# # C extensions
-# *.so
+# C extensions
+*.so
 
-# # Distribution / packaging
-# .Python
-# build/
-# develop-eggs/
-# dist/
-# downloads/
-# eggs/
-# .eggs/
-# lib/
-# lib64/
-# parts/
-# sdist/
-# var/
-# wheels/
-# *.egg-info/
-# .installed.cfg
-# *.egg
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# # PyInstaller
-# *.manifest
-# *.spec
+# PyInstaller
+*.manifest
+*.spec
 
-# # Installer logs
-# pip-log.txt
-# pip-delete-this-directory.txt
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# # Unit test / coverage reports
-# htmlcov/
-# .tox/
-# .nox/
-# .coverage
-# .coverage.*
-# .cache
-# nosetests.xml
-# coverage.xml
-# *.cover
-# *.py,cover
-# .hypothesis/
-# .pytest_cache/
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
 
-# # Translations
-# *.mo
-# *.pot
+# Translations
+*.mo
+*.pot
 
-# # Environments
-# .env
-# .venv
-# env/
-# venv/
-# ENV/
-# env.bak/
-# venv.bak/
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
-# # Jupyter Notebook
-# .ipynb_checkpoints
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# # IPython
-# profile_default/
-# ipython_config.py
+# IPython
+profile_default/
+ipython_config.py
 
-# # pyenv
-# .python-version
+# pyenv
+.python-version
 
-# # mypy
-# .mypy_cache/
-# .dmypy.json
-# dmypy.json
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
-# # Pyre
-# .pyre/
+# Pyre
+.pyre/
 
-# # ruff
-# .ruff_cache/
+# ruff
+.ruff_cache/
 
-# # IDE
-# .idea/
-# *.swp
-# *.swo
-# *~
+# IDE
+.idea/
+*.swp
+*.swo
+*~
 
-# # OS
-# .DS_Store
-# Thumbs.db
+# OS
+.DS_Store
+Thumbs.db
