--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ openai>=1.0.0
 requests>=2.31.0
 aiohttp>=3.9.0
 python-dotenv>=1.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+pandas>=2.0.0
+numpy>=1.24.0
+huggingface_hub>=0.19.0
+datasets>=2.14.0
+unsloth[colab-new]>=2024.1
+trl>=0.7.0
+torch>=2.1.0
+httpx>=0.24.0
+packaging>=23.0
